--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-torch>=1.2.0
-transformers>=3.0.2
+torch==1.4.0
+transformers==3.4.0
 tensorboardX
-pytorch-lightning==0.6.0
-test-tube==0.7.5
+pytorch-lightning==1.0.3
